--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,16 +3,16 @@ name = "comp-685-fall-2025"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.11,<3.13"
 dependencies = [
     "albumentations>=2.0.8",
     "earthengine-api>=1.6.14",
     "ebird-api>=4.0.0",
-    "huggingface-hub>=1.0.1",
+    "huggingface-hub>=0.34,<1.0",
     "landsatxplore>=0.15.0",
     "lightning>=2.5.5",
     "matplotlib>=3.10.7",
-    "numpy>=2.3.4",
+    "numpy>=1.23,<2.0",
     "opencv-python-headless>=4.11.0.86",
     "pygbif>=0.6.5",
     "pyinaturalist>=0.20.2",
@@ -22,6 +22,10 @@ dependencies = [
     "torchgeo>=0.7.1",
     "torchvision>=0.24.0",
     "tqdm>=4.67.1",
+    # add these to ensure wheels (no Rust build) and avoid the yanked 4.57.0
+    "transformers>=4.54,<4.57",
+    "tokenizers>=0.15",
+    "chronos-forecasting==2.0.0",
 ]
 
 [dependency-groups]
