--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "fme>=2025.10.0",
     "cfgrib>=0.9.15.1",
     "eccodes>=2.44.0",
+    "cdsapi>=0.7.7",
 ]
 
 [dependency-groups]
