--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "cdsapi>=0.7.7",
     "geopandas>=0.14.4",
     "shapely>=1.8.5.post1",
+    "tabulate>=0.9.0",
 ]
 
 [dependency-groups]
