--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "geopandas>=0.14.4",
     "shapely>=1.8.5.post1",
     "tabulate>=0.9.0",
+    "folium>=0.20.0",
 ]
 
 [dependency-groups]
