--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,8 @@ dependencies = [
     "shapely>=1.8.5.post1",
     "tabulate>=0.9.0",
     "folium>=0.20.0",
+    "kagglehub>=0.3.13",
+    "xarray>=2025.10.1",
 ]
 
 [dependency-groups]
